# intelligent-schema

./: README.md  config.yaml  pyproject.toml  schema_snapshot.json
app/: __init__.py  api.py  audit.py  cache.py  config.py  db.py  executor.py  guardrails.py  llm_client.py  llm_reasoner.py  logging_utils.py  main.py  models.py  observability.py  pipeline.py  prompts.py  rate_limiter.py  schema_extractor.py  schema_ranker.py  schema_selector.py  sql_generator.py  sql_validator.py  synthesizer.py
docs/: ROADMAP.md
loadtest/: locustfile.py
prompts/: prompt_examples.json  reasoner_schema.json  synthesizer_schema.json
scripts/: precompute_embeddings.py
tests/unit/: test_rate_limiter.py  test_schema_ranker.py  test_schema_selector.py  test_sql_validator.py
